--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -35,6 +35,8 @@
         "patterns": ["*/*/*"]
       }
     ],
-    "arrow-body-style": ["error", "as-needed"]
+    "arrow-body-style": ["error", "as-needed"],
+    "react/prop-types": "off",
+    "react/display-name": "off"
   }
 }
